test/parser/prs/cond-01.hac
template <pint N>
defproc ass() {
	bool x, a;
	[N!=0 & N!=1->
		prs {
			x -> a-
		}
	]
}
